{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 9,
  "lineage": "7c80c2a8-48e9-fb36-722b-f938c9ff3515",
  "resources": [
    {
      "module": "module.application_gateway",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "application_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/backendAddressPool",
                "ip_addresses": [],
                "name": "backendAddressPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/backendHttpSettings",
                "name": "backendHttpSettings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/frontendIpConfig",
                "name": "frontendIpConfig",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/publicIPAddresses/appgateway-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/frontendPort",
                "name": "frontendPort",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/virtualNetworks/cmt-lta-bmms-uat-internet-01/subnets/snet-lta-bmms-uat-gw-01"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/frontendIpConfig",
                "frontend_ip_configuration_name": "frontendIpConfig",
                "frontend_port_id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/frontendPort",
                "frontend_port_name": "frontendPort",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/httpListener",
                "name": "httpListener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway",
            "identity": [],
            "location": "southeastasia",
            "name": "appgateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/backendAddressPool",
                "backend_address_pool_name": "backendAddressPool",
                "backend_http_settings_id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/backendHttpSettings",
                "backend_http_settings_name": "backendHttpSettings",
                "http_listener_id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/httpListener",
                "http_listener_name": "httpListener",
                "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/requestRoutingRules/defaultRoutingRule",
                "name": "defaultRoutingRule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rgrp-lta-bmms-uat-01",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "Environment": "uat",
              "Project": "lta",
              "Purpose": "Application Gateway"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/backendAddressPool",
                "default_backend_address_pool_name": "backendAddressPool",
                "default_backend_http_settings_id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/backendHttpSettings",
                "default_backend_http_settings_name": "backendHttpSettings",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/urlPathMaps/urlPathMap",
                "name": "urlPathMap",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/backendAddressPool",
                    "backend_address_pool_name": "backendAddressPool",
                    "backend_http_settings_id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/backendHttpSettings",
                    "backend_http_settings_name": "backendHttpSettings",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/applicationGateways/appgateway/urlPathMaps/urlPathMap/pathRules/examplePathRule",
                    "name": "examplePathRule",
                    "paths": [
                      "/example/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [
              {
                "disabled_rule_group": [],
                "enabled": true,
                "exclusion": [],
                "file_upload_limit_mb": 100,
                "firewall_mode": "Prevention",
                "max_request_body_size_kb": 128,
                "request_body_check": true,
                "rule_set_type": "OWASP",
                "rule_set_version": "3.2"
              }
            ],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.uat_01",
            "module.application_gateway.azurerm_public_ip.public_ip",
            "module.application_gateway.azurerm_subnet.uat_gw_01",
            "module.network_uat_internet_01.azurerm_network_ddos_protection_plan.ddos_plan",
            "module.network_uat_internet_01.azurerm_network_security_group.uat_nsg",
            "module.network_uat_internet_01.azurerm_subnet.uat_public_01",
            "module.network_uat_internet_01.azurerm_virtual_network.uat_internet_01"
          ]
        }
      ]
    },
    {
      "module": "module.application_gateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "Enabled",
            "ddos_protection_plan_id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/ddosProtectionPlans/ddos-lta-bmms-uat-01",
            "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/publicIPAddresses/appgateway-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.194.130.110",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "appgateway-pip",
            "resource_group_name": "rgrp-lta-bmms-uat-01",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.uat_01",
            "module.network_uat_internet_01.azurerm_network_ddos_protection_plan.ddos_plan",
            "module.network_uat_internet_01.azurerm_network_security_group.uat_nsg",
            "module.network_uat_internet_01.azurerm_subnet.uat_public_01",
            "module.network_uat_internet_01.azurerm_virtual_network.uat_internet_01"
          ]
        }
      ]
    },
    {
      "module": "module.application_gateway",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "uat_gw_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.0.64/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/virtualNetworks/cmt-lta-bmms-uat-internet-01/subnets/snet-lta-bmms-uat-gw-01",
            "name": "snet-lta-bmms-uat-gw-01",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rgrp-lta-bmms-uat-01",
            "virtual_network_name": "cmt-lta-bmms-uat-internet-01"
          },
          "dependencies": [
            "azurerm_resource_group.uat_01",
            "module.network_uat_internet_01.azurerm_network_ddos_protection_plan.ddos_plan",
            "module.network_uat_internet_01.azurerm_network_security_group.uat_nsg",
            "module.network_uat_internet_01.azurerm_subnet.uat_public_01",
            "module.network_uat_internet_01.azurerm_virtual_network.uat_internet_01"
          ]
        }
      ]
    },
    {
      "module": "module.network_uat_internet_01",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "uat_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/networkSecurityGroups/sgrp-lta-bmms-uat-internet-01",
            "location": "southeastasia",
            "name": "sgrp-lta-bmms-uat-internet-01",
            "resource_group_name": "rgrp-lta-bmms-uat-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow MAS Data Traffic Inbound",
                "destination_address_prefix": "20.184.16.181",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowMASDataTrafficInbound",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "52.187.68.137",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "443",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow MAS Data Traffic Outbound",
                "destination_address_prefix": "172.16.2.64",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowMASDataTrafficOutbound",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "20.184.16.181",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "443",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow Palo Alto Firewall",
                "destination_address_prefix": "20.184.16.181",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowPaloAltoFirewall",
                "priority": 301,
                "protocol": "Tcp",
                "source_address_prefix": "172.16.3.36",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "443",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow VA Scanning TCP",
                "destination_address_prefix": "20.184.16.181",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVAScanning-tcp",
                "priority": 302,
                "protocol": "Tcp",
                "source_address_prefix": "172.16.3.164",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow VA Scanning UDP",
                "destination_address_prefix": "20.184.16.181",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVAScanning-udp",
                "priority": 303,
                "protocol": "Udp",
                "source_address_prefix": "172.16.3.164",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Authentication to Active Directory Port 389",
                "destination_address_prefix": "172.16.3.52",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowActiveDirectoryOutbound-389",
                "priority": 302,
                "protocol": "Tcp",
                "source_address_prefix": "20.184.16.181",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "389-636",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "DNS on TCP port 53",
                "destination_address_prefix": "172.16.3.52",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowDNSOutbound-tcp",
                "priority": 304,
                "protocol": "Tcp",
                "source_address_prefix": "20.184.16.181",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "53",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "DNS on UDP port 53",
                "destination_address_prefix": "172.16.3.52",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowDNSOutbound-udp",
                "priority": 305,
                "protocol": "Udp",
                "source_address_prefix": "20.184.16.181",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "53",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Network Time Protocol (NTP) on UDP port 123",
                "destination_address_prefix": "172.16.3.52",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowNTPOutbound",
                "priority": 301,
                "protocol": "Udp",
                "source_address_prefix": "20.184.16.181",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "123",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "uat",
              "Project": "lta",
              "Purpose": "UAT - Public Internet"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.uat_01"
          ]
        }
      ]
    },
    {
      "module": "module.network_uat_internet_01",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "uat_public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.0.32/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/virtualNetworks/cmt-lta-bmms-uat-internet-01/subnets/snet-lta-bmms-uat-public-01",
            "name": "snet-lta-bmms-uat-public-01",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rgrp-lta-bmms-uat-01",
            "virtual_network_name": "cmt-lta-bmms-uat-internet-01"
          },
          "dependencies": [
            "azurerm_resource_group.uat_01",
            "module.network_uat_internet_01.azurerm_network_ddos_protection_plan.ddos_plan",
            "module.network_uat_internet_01.azurerm_virtual_network.uat_internet_01"
          ]
        }
      ]
    },
    {
      "module": "module.network_uat_internet_01",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "uat_internet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/25"
            ],
            "ddos_protection_plan": [
              {
                "enable": true,
                "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/ddosProtectionPlans/ddos-lta-bmms-uat-01"
              }
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "287b8701-ff64-4b0b-8456-3d113ef08c54",
            "id": "/subscriptions/edac42ac-107c-444e-a047-8760b74ff27e/resourceGroups/rgrp-lta-bmms-uat-01/providers/Microsoft.Network/virtualNetworks/cmt-lta-bmms-uat-internet-01",
            "location": "southeastasia",
            "name": "cmt-lta-bmms-uat-internet-01",
            "resource_group_name": "rgrp-lta-bmms-uat-01",
            "tags": {
              "Environment": "uat",
              "Project": "lta",
              "Purpose": "UAT - Public Internet"
            }
          },
          "dependencies": [
            "azurerm_resource_group.uat_01",
            "module.network_uat_internet_01.azurerm_network_ddos_protection_plan.ddos_plan"
          ]
        }
      ]
    }
  ]
}